Ajout de quelques commentaires

--- a/Projet_ESC(1).ipynb
+++ b/Projet_ESC(1).ipynb
@@ -47,7 +47,8 @@
         "- https://github.com/SunnerLi/SoundNet_Pytorch\n",
         "- http://soundnet.csail.mit.edu/\n",
         "- https://github.com/EsamGhaleb/soundNet_pytorch\n",
-        "- https://github.com/jplumail/SoundNet"
+        "- https://github.com/jplumail/SoundNet\n",
+        "- https://github.com/karolpiczak/ESC-50"
       ]
     },
     {
@@ -86,7 +87,7 @@
         "id": "rHn0GOxiofjn"
       },
       "source": [
-        "The loss is a KL loss (for Kullback-Leibler Divergence) which is defined by : \n",
+        "The loss is a __KL loss__ (for *Kullback-Leibler Divergence*) which is defined by : \n",
         "$$\\text{KL}(P,Q) = - \\sum_{x \\in X} P(x) \\times \\log(\\frac{Q(x)}{P(x)})$$  \n",
         "This loss is special because it measures how one probability distribution is different from a second.   \n",
         "This loss is interesting in this case because it can effectively compare two distributions.  \n",
@@ -137,7 +138,7 @@
         "from real_util import *\n",
         "output.clear()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +175,7 @@
         "y = np.load(\"y.npy\")\n",
         "output.clear()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +199,7 @@
         "!wget https://github.com/SunnerLi/SoundNet_Pytorch/raw/master/sound8.pth\n",
         "output.clear()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +244,7 @@
         "    model = SoundNet()\n",
         "    model.load_state_dict(torch.load('sound8.pth'))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +366,7 @@
         "scores = cross_val_score(clf, X, y, cv=custom_cv)\n",
         "print(f'Score obtenu en Cross validation avec les meilleurs paramètres: {scores.mean():0.2f}')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +392,7 @@
         "id": "w2i6Avo9P8_3"
       },
       "source": [
-        "# 3) Visualization of the Database\n",
+        "# 3) Visualization of the Data\n",
         "\n",
         "In this part we will visualize the Soundnet outputs in 2 dimensions using Umap according to several factors in order to better understand the differences between the Soundnet outputs."
       ]
@@ -416,7 +417,7 @@
         "  umap.plot.points(mapper_out_1,labels=np.asarray(label))\n",
         "  plt.title(title,fontsize=20)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -447,7 +448,7 @@
         "umap_visualisation(X_out_6,y_tronque,y_reduct,\"Output 6\")\n",
         "umap_visualisation(X_out_7,y_tronque,y_reduct,\"Output 7\")"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -573,7 +574,7 @@
         "umap_visualisation(X_interior,y_interior,y_labels_interior,\"Interior/domestic sounds\")\n",
         "umap_visualisation(X_exterior,y_exterior,y_labels_exterior,\"Exterior/urban noises\")"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -682,7 +683,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +731,7 @@
         "umap_visualisation(X_difficult,y_difficult,y_labels_difficult,\"Difficult labels\")\n",
         "umap_visualisation(X_simple,y_simple,y_labels_simple,\"Easy labels\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -767,7 +768,8 @@
         "Immediately we can notice that the clusters of the classes difficult to predict are less dense than those of the easy classes.  \n",
         "However this difference is slight and taking for example the class water drops which is a difficult class we notice that this class was easy to clusterize.  \n",
         "This is partly because Umap uses all the data to fit, unlike our SVM which uses a test set.  \n",
-        "This shows us that a visualization method such as Umap is very interesting to better understand the data but that this is not enough to perform a precise classification."
+        "This shows us that a visualization method such as Umap is very interesting to better understand the data but that this is not enough to perform a precise classification.  \n",
+        "For example, if we had no knowledge on Soundnet it could have allowed us to know which output is the most interesting to carry out the learning transfer."
       ]
     },
     {
