ajout de commentaire

--- a/Projet_ESC(1).ipynb
+++ b/Projet_ESC(1).ipynb
@@ -272,8 +272,8 @@
       "source": [
         "# 2) Transfert Learning\n",
         "\n",
-        "In this part we will perform Transfert Learning from the SoundNet model output 5.  \n",
-        "We will then use the result of this output to train an SVM on the ESC-50 database.  \n",
+        "In this part we will perform Transfert Learning from the SoundNet model output 5 (which corresponds to the convolutionnal layer 5) in order to perform classification.  \n",
+        "We will then use the result of this output to train an Linear SVM with the ESC-50 database.  \n",
         "We chose this output because it is the one that gives the best results according to the Soundnet study."
       ]
     },
@@ -284,7 +284,7 @@
       },
       "source": [
         "It is important to note that the different Soundnet outputs retain the time dimension.  \n",
-        "At first we just flattened the data using the reshape(-1) function. In this case we obtained a result of 0.63 in cross validation which is quite far from the expected result (0.75).  \n",
+        "At first we just flattened the data using the reshape(-1) function. In this case we obtained a result of 0.63 in cross validation which is quite far from the expected result (0.74).  \n",
         "Following Mr Farrugia’s advice, we decided to remove the time dimension by averaging time.  \n",
         "This greatly improved our results (0.63 to 0.72) while significantly improving the calculation speed, indeed by doing so we greatly reduced the size of our features."
       ]
@@ -400,7 +400,9 @@
         "id": "o2zMJo62PgAd"
       },
       "source": [
-        "We see that we get a score of 0.72 on a cross validation on the 5 official folds of ESC-50. This is very similar to the results obtained by researchers working on SoundNet( 0.75). This slight difference can be explained by the fact that we did not use Data Augmentation to train our SVM."
+        "We see that we get a score of 0.72 on a cross validation on the 5 official folds of ESC-50. This is very similar to the results obtained by researchers working on SoundNet( 0.74). This slight difference can be explained by the fact that we did not use Data Augmentation to train our SVM.  \r\n",
+        "Note that currently the best accuracy on this Dataset is 86.50% and is owned by __Unsupervised Filterbank Learning Using Convolutional Restricted Boltzmann Machine for Environmental Sound Classification__.  \r\n",
+        "We might have been able to get better results using different techniques (Data augmentation for example) or use another classifier but we chose not to spend too much time on this part."
       ]
     },
     {
@@ -411,7 +413,8 @@
       "source": [
         "# 3) Visualization of the Data\n",
         "\n",
-        "In this part we will visualize the Soundnet outputs in 2 dimensions using Umap according to several factors in order to better understand the differences between the Soundnet outputs."
+        "In this part we will visualize the Soundnet outputs in 2 dimensions using Umap according to several factors in order to better understand the differences between the Soundnet outputs.  \n",
+        "We want to use this visualization to visually determine which is the best output to do Transfer Learning."
       ]
     },
     {
@@ -443,7 +446,9 @@
         "id": "LID0RK5WXlId"
       },
       "source": [
-        "We chose to display the labels under the 5 main classes of the ESC-50 (Animals, Natural soundscapes & water sounds, Human non-speech sounds,Interior/domestic sounds, Exterior/urban noises. Indeed with the 50 classes it is impossible to understand the results visually."
+        "We chose to display the labels under the 5 main classes of the ESC-50 (Animals, Natural soundscapes & water sounds, Human non-speech sounds,Interior/domestic sounds, Exterior/urban noises). Indeed with the 50 classes it is impossible to understand the results visually.  \r\n",
+        "Obviously in the following images it will be impossible to find a large cluster containing all the animals (red dots), indeed a dog and an insect are both considered as animals however they make very different noises.  \r\n",
+        "The objective is therefore to identify mini clusters and ideally be able to find 50 (the 50 classes)."
       ]
     },
     {
@@ -559,7 +564,6 @@
         "id": "2xSVKonDZI00"
       },
       "source": [
-        "First of all we notice that in all outputs it is very difficult to distinguish clusters corresponding to the 5 major classes. This makes sense because each large class contains 10 distinct classes and these classes are sometimes very distinct from each other (a dog and an insect are considered as animals but their sound is very different).\n",
         "Then we notice that for outputs 1 and 2, the data are not distinguishable from each other (no appearance of mini cluster).  \n",
         "However looking at outputs 3,4,5 and 6 we observe the appearance of mini clusters of the same color corresponding surely to the different subclasses. It can be noted that output 5 gives a clearer separation which explains why we use this output to obtain the best results in learning transfer.\n",
         "Output 7 surprisingly gives worse results than previous outputs even if it remains more efficient than outputs 1 and 2."
@@ -662,7 +666,7 @@
       },
       "source": [
         "It is noted that all subclasses are easily distinguishable from each other. This confirms our good results obtained during cross validation.\n",
-        "However we observe that sometimes some points are not found in their cluster or even in a different cluster. We will now focus on the classes that are confused with the others using the confusion matrix."
+        "However we observe that sometimes some points are not found in their cluster or even in a different cluster. We will now focus on the classes that are confused with the others using the confusion matrix.  "
       ]
     },
     {
@@ -1249,17 +1253,6 @@
       "source": [
         "Surprisingly, the deeper we are, the less the neurons are correlated to one class. While for a neuron in the first layer, approximately more than 20% of its activations are done by one class, for the last layer it is more around 10-15%. One could have expected that classes (high level of abstraction) would be more correlated to neurons of deep layers."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "v2ACX41Lkhvi"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
